# STREAM_MONITOR

./: .gitignore  CMakeList.txt  CMakeLists.txt  Config.cpp  Config.h  FILE_STRUCTURE.md  MultiStreamMonitor.cpp  MultiStreamMonitor.h  Notification.cpp  Notification.h  README.md  README_GUI.md  Statistics.cpp  Statistics.h  StreamMonitor.cpp  StreamMonitor.h  config.ini  main.cpp  stats_Nix.json  streamers.txt
config/: config.ini.example  streamers.txt.example
include/: BrowserController.h  Constants.h  HumanBehavior.h  Logger.h  Notification.h  Statistics.h  StreamMonitor.h
include/core/: Config.h  MultiStreamMonitor.h  StringUtils.h  WebScraper.h
include/gui/: AddStreamerDialog.h  MainWindow.h  StreamerItem.h  StreamerListWidget.h  TrayIcon.h
include/models/: MonitorController.h  StreamerPriority.h
resources/: resources.qrc
resources/styles/: dark_theme.qss
scripts/: build_gui.bat  build_gui_complete.bat  build_gui_msys2.sh  build_with_curl.bat  check_curl.bat  check_structure.bat  compile.bat  find_curl_dd.bat  migrate_to_v2.4_structure.bat  scructure.bat  setup_curl_dll.bat
src/: BrowserController.cpp  Config.cpp  Logger.cpp  MultiStreamMonitor.cpp  Statistics.cpp  StringUtils.cpp  WebScraper.cpp  main.cpp  main_gui.cpp
src/core/: BrowserController.cpp  Config.cpp  HumanBehavior.cpp  Notification.cpp  StreamMonitor.cpp
src/gui/: AddStreamerDialog.cpp  MainWindow.cpp  StreamerItem.cpp  StreamerListWidget.cpp  TrayIcon.cpp
src/models/: MonitorController.cpp  StreamerPriority.cpp
